resolviendo la responsividad

--- a/index.html
+++ b/index.html
@@ -10,37 +10,56 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="./img/icono.png">
-
+    <link rel="icon" type="image/png" href="./img/icono.png" />
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#user">Manual de Usuario</a>
-          <ul class="nav nav-pills">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Manual de Usuario</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Cliente</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Cliente</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#administrador">Administrador</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#carrito">Carrito de Compras</a>
             </li>
           </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
 
     <main id="user" class="container my-5">
       <!-- Sección de Mensajes -->
       <section>
         <h2><i class="bi bi-chat-dots"></i> Mensajes y Comentarios</h2>
         <p>
-          En esta sección puedes compartir tus comentarios y sugerencias. Ten en cuenta que tu nombre de usuario será visible para el administrador cuando revise tus mensajes. Valoramos tu opinión y nos esforzamos por mejorar continuamente basados en tus comentarios.
+          En esta sección puedes compartir tus comentarios y sugerencias. Ten en
+          cuenta que tu nombre de usuario será visible para el administrador
+          cuando revise tus mensajes. Valoramos tu opinión y nos esforzamos por
+          mejorar continuamente basados en tus comentarios.
         </p>
       </section>
 
@@ -48,7 +67,11 @@
       <section>
         <h2><i class="bi bi-clock-history"></i> Historial de Transacciones</h2>
         <p>
-          Consulta tu historial completo de tickets de venta. Puedes buscar transacciones por fecha específica, imprimir tickets anteriores en caso de pérdida y revisar todas tus operaciones realizadas en el sistema. Toda tu actividad comercial queda registrada para futuras consultas.
+          Consulta tu historial completo de tickets de venta. Puedes buscar
+          transacciones por fecha específica, imprimir tickets anteriores en
+          caso de pérdida y revisar todas tus operaciones realizadas en el
+          sistema. Toda tu actividad comercial queda registrada para futuras
+          consultas.
         </p>
       </section>
 
@@ -56,7 +79,10 @@
       <section>
         <h2><i class="bi bi-box-arrow-right"></i> Cerrar Sesión</h2>
         <p>
-          Al seleccionar esta opción, serás redirigido fuera de la aplicación. No te preocupes, toda la información de tus transacciones permanecerá segura y accesible en la sección de Historial para cuando necesites consultarla nuevamente.
+          Al seleccionar esta opción, serás redirigido fuera de la aplicación.
+          No te preocupes, toda la información de tus transacciones permanecerá
+          segura y accesible en la sección de Historial para cuando necesites
+          consultarla nuevamente.
         </p>
       </section>
 
@@ -64,15 +90,24 @@
       <section>
         <h2><i class="bi bi-code-slash"></i> Tengo otro código</h2>
         <p>
-          Si dispones de un código diferente o deseas explorar productos de otros proveedores, ingresa el nuevo código en este apartado. El sistema te mostrará automáticamente los productos y servicios disponibles del administrador asociado a ese código.
+          Si dispones de un código diferente o deseas explorar productos de
+          otros proveedores, ingresa el nuevo código en este apartado. El
+          sistema te mostrará automáticamente los productos y servicios
+          disponibles del administrador asociado a ese código.
         </p>
       </section>
 
       <!-- Sección de Solicitud de Permisos de Administrador -->
       <section>
-        <h2><i class="bi bi-shield-lock"></i> Solicitar Permisos de Administrador</h2>
+        <h2>
+          <i class="bi bi-shield-lock"></i> Solicitar Permisos de Administrador
+        </h2>
         <p>
-          Para acceder a todas las funcionalidades avanzadas de la aplicación, primero debes solicitar permisos de administrador. Este proceso puede requerir verificación y aprobación, por lo que el acceso no es inmediato. Una vez concedidos los permisos, la opción cambiará a "Panel de Administrador", dándote acceso a:
+          Para acceder a todas las funcionalidades avanzadas de la aplicación,
+          primero debes solicitar permisos de administrador. Este proceso puede
+          requerir verificación y aprobación, por lo que el acceso no es
+          inmediato. Una vez concedidos los permisos, la opción cambiará a
+          "Panel de Administrador", dándote acceso a:
         </p>
         <ul>
           <li>Configuración de impresoras térmicas (55mm y 80mm)</li>
@@ -88,7 +123,11 @@
       <section>
         <h2><i class="bi bi-person-x"></i> Eliminar Cuenta</h2>
         <p>
-          En esta sección puedes eliminar permanentemente tu cuenta de administrador. Ten en cuenta que esta acción eliminará toda la información asociada a tu cuenta de forma irreversible. Te recomendamos asegurarte de tener respaldos de tu información antes de proceder con la eliminación.
+          En esta sección puedes eliminar permanentemente tu cuenta de
+          administrador. Ten en cuenta que esta acción eliminará toda la
+          información asociada a tu cuenta de forma irreversible. Te
+          recomendamos asegurarte de tener respaldos de tu información antes de
+          proceder con la eliminación.
         </p>
       </section>
 
@@ -98,34 +137,63 @@
       <section>
         <h2><i class="bi bi-printer"></i> Configuración de Impresora</h2>
         <p>
-          Para utilizar la funcionalidad de impresión, primero debes aceptar los permisos correspondientes. Si los deniegas, no podrás utilizar la impresora. Sigue estos pasos:
+          Para utilizar la funcionalidad de impresión, primero debes aceptar los
+          permisos correspondientes. Si los deniegas, no podrás utilizar la
+          impresora. Sigue estos pasos:
         </p>
         <ol>
           <li>Empareja tu impresora Bluetooth con el dispositivo móvil</li>
-          <li>Selecciona la impresora desde la lista de dispositivos disponibles</li>
-          <li>Espera a que se establezca la conexión (un indicador de color te confirmará el estado)</li>
-          <li>Configura el tipo de impresora (55mm u 80mm) según tu hardware</li>
-          <li>Realiza una prueba de impresión para verificar la configuración</li>
+          <li>
+            Selecciona la impresora desde la lista de dispositivos disponibles
+          </li>
+          <li>
+            Espera a que se establezca la conexión (un indicador de color te
+            confirmará el estado)
+          </li>
+          <li>
+            Configura el tipo de impresora (55mm u 80mm) según tu hardware
+          </li>
+          <li>
+            Realiza una prueba de impresión para verificar la configuración
+          </li>
         </ol>
         <p>
-          Asegúrate de tener papel en la impresora antes de realizar cualquier prueba o impresión.
+          Asegúrate de tener papel en la impresora antes de realizar cualquier
+          prueba o impresión.
         </p>
       </section>
 
       <!-- Sección de Agregar Productos -->
       <section>
         <h2><i class="bi bi-plus-circle"></i> Agregar Productos</h2>
-        <p>
-          Sigue este proceso para añadir nuevos productos al catálogo:
-        </p>
+        <p>Sigue este proceso para añadir nuevos productos al catálogo:</p>
         <ol>
-          <li>Imagen (opcional): Añade una imagen para hacer tus productos más atractivos</li>
-          <li>Nombre para ticket: Define el nombre que aparecerá en los tickets, considerando el límite de caracteres según tu tipo de impresora (55mm u 80mm)</li>
-          <li>Detalles adicionales (opcional): Proporciona información extendida que se mostrará en la ficha del producto</li>
-          <li>Texto para búsqueda por voz: Añade términos alternativos para facilitar la búsqueda vocal</li>
+          <li>
+            Imagen (opcional): Añade una imagen para hacer tus productos más
+            atractivos
+          </li>
+          <li>
+            Nombre para ticket: Define el nombre que aparecerá en los tickets,
+            considerando el límite de caracteres según tu tipo de impresora
+            (55mm u 80mm)
+          </li>
+          <li>
+            Detalles adicionales (opcional): Proporciona información extendida
+            que se mostrará en la ficha del producto
+          </li>
+          <li>
+            Texto para búsqueda por voz: Añade términos alternativos para
+            facilitar la búsqueda vocal
+          </li>
           <li>Precio: Establece el valor del producto</li>
-          <li>Categoría: Asigna hasta 8 categorías diferentes para organizar tus productos</li>
-          <li>Subcategoría: Crea hasta 3 subcategorías por categoría para una organización más detallada</li>
+          <li>
+            Categoría: Asigna hasta 8 categorías diferentes para organizar tus
+            productos
+          </li>
+          <li>
+            Subcategoría: Crea hasta 3 subcategorías por categoría para una
+            organización más detallada
+          </li>
           <li>Finaliza presionando el botón "Registrar"</li>
         </ol>
       </section>
@@ -134,7 +202,11 @@
       <section>
         <h2><i class="bi bi-grid"></i> Productos Registrados</h2>
         <p>
-          Consulta y gestiona todos tus productos registrados. Puedes editar información, eliminar productos obsoletos o buscar elementos específicos por nombre. Para inventarios extensos, utiliza las opciones de filtrado y búsqueda avanzada para localizar productos rápidamente.
+          Consulta y gestiona todos tus productos registrados. Puedes editar
+          información, eliminar productos obsoletos o buscar elementos
+          específicos por nombre. Para inventarios extensos, utiliza las
+          opciones de filtrado y búsqueda avanzada para localizar productos
+          rápidamente.
         </p>
       </section>
 
@@ -142,20 +214,29 @@
       <section>
         <h2><i class="bi bi-chat-left-text"></i> Comentarios de Usuarios</h2>
         <p>
-          Revisa los comentarios y opiniones que los usuarios han compartido sobre tus productos y servicios. Puedes gestionar estos comentarios según sea necesario, con la opción de eliminar aquellos que no sean apropiados.
+          Revisa los comentarios y opiniones que los usuarios han compartido
+          sobre tus productos y servicios. Puedes gestionar estos comentarios
+          según sea necesario, con la opción de eliminar aquellos que no sean
+          apropiados.
         </p>
       </section>
 
       <!-- Sección de Configuración de Ticket -->
       <section>
         <h2><i class="bi bi-receipt"></i> Configuración de Ticket de Venta</h2>
-        <p>
-          Personaliza los tickets de venta según tus necesidades:
-        </p>
+        <p>Personaliza los tickets de venta según tus necesidades:</p>
         <ol>
-          <li>Establece un código único para que tus clientes accedan a tus productos</li>
-          <li>Configura la información empresarial que aparecerá en el ticket: nombre del negocio, dirección, teléfono y horario de atención</li>
-          <li>Selecciona los elementos específicos que deseas incluir en el ticket</li>
+          <li>
+            Establece un código único para que tus clientes accedan a tus
+            productos
+          </li>
+          <li>
+            Configura la información empresarial que aparecerá en el ticket:
+            nombre del negocio, dirección, teléfono y horario de atención
+          </li>
+          <li>
+            Selecciona los elementos específicos que deseas incluir en el ticket
+          </li>
           <li>Define un número inicial para el contador de tickets</li>
           <li>Restablece el contador cuando sea necesario</li>
         </ol>
@@ -165,7 +246,10 @@
       <section>
         <h2><i class="bi bi-cash-stack"></i> Resumen de Caja</h2>
         <p>
-          Consulta reportes detallados de ventas por fecha o rangos personalizados. Visualiza los productos más vendidos, el total de ingresos y obtén perspectivas valiosas sobre el desempeño comercial de tu negocio.
+          Consulta reportes detallados de ventas por fecha o rangos
+          personalizados. Visualiza los productos más vendidos, el total de
+          ingresos y obtén perspectivas valiosas sobre el desempeño comercial de
+          tu negocio.
         </p>
       </section>
 
@@ -173,21 +257,54 @@
       <section id="carrito">
         <h2><i class="bi bi-cart"></i> Carrito de Compra</h2>
         <p>
-          <img src="./img/convert_audio_text.svg" alt="Icono de voz a texto" class="img-icon">
-          Al presionar este botón, activarás la función de búsqueda por voz. Primero indica la cantidad deseada y luego el nombre del producto. Por ejemplo: "una computadora, dos teclados y un mouse". Finaliza la grabación presionando nuevamente el botón. El sistema procesará tu solicitud y agregará los productos al carrito.
+          <img
+            src="./img/convert_audio_text.svg"
+            alt="Icono de voz a texto"
+            class="img-icon"
+          />
+          Al presionar este botón, activarás la función de búsqueda por voz.
+          Primero indica la cantidad deseada y luego el nombre del producto. Por
+          ejemplo: "una computadora, dos teclados y un mouse". Finaliza la
+          grabación presionando nuevamente el botón. El sistema procesará tu
+          solicitud y agregará los productos al carrito.
         </p>
         <p>
-          <img src="./img/ic_cart.svg" alt="Icono de carrito" class="img-icon">
-          Presiona este botón para confirmar y agregar los productos seleccionados al carrito. Desde aquí puedes modificar cantidades, eliminar productos o continuar shopping. Una vez impreso el ticket, el carrito se vaciará automáticamente.
+          <img
+            src="./img/ic_cart.svg"
+            alt="Icono de carrito"
+            class="img-icon"
+          />
+          Presiona este botón para confirmar y agregar los productos
+          seleccionados al carrito. Desde aquí puedes modificar cantidades,
+          eliminar productos o continuar shopping. Una vez impreso el ticket, el
+          carrito se vaciará automáticamente.
         </p>
         <p>
-          <img src="./img/descriptionTicket.svg" alt="Icono de descripción" class="img-icon">
-          Añade descripciones personalizadas al ticket de venta. Presiona el botón, graba tu mensaje y vuelve a presionar para finalizar. Puedes editar o eliminar la descripción antes de confirmar con 
-          <img src="./img/document.svg" alt="Icono de documento" class="img-icon">. La descripción aparecerá al final del ticket.
+          <img
+            src="./img/descriptionTicket.svg"
+            alt="Icono de descripción"
+            class="img-icon"
+          />
+          Añade descripciones personalizadas al ticket de venta. Presiona el
+          botón, graba tu mensaje y vuelve a presionar para finalizar. Puedes
+          editar o eliminar la descripción antes de confirmar con
+          <img
+            src="./img/document.svg"
+            alt="Icono de documento"
+            class="img-icon"
+          />. La descripción aparecerá al final del ticket.
         </p>
         <p>
-          Alternativamente, puedes buscar productos manualmente en la pantalla principal o utilizando la lupa de búsqueda 
-          <img src="./img/inventory.svg" alt="Icono de inventario" class="img-icon"> para localizar productos por nombre. Finaliza el proceso presionando el botón de impresión para generar el ticket y completar la transacción.
+          Alternativamente, puedes buscar productos manualmente en la pantalla
+          principal o utilizando la lupa de búsqueda
+          <img
+            src="./img/inventory.svg"
+            alt="Icono de inventario"
+            class="img-icon"
+          />
+          para localizar productos por nombre. Finaliza el proceso presionando
+          el botón de impresión para generar el ticket y completar la
+          transacción.
         </p>
       </section>
     </main>
@@ -195,12 +312,12 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-sm-12 col-md-6 col-lg-6">
             <h5>Contacto</h5>
             <p><i class="bi bi-envelope"></i> chambaflores1999@gmail.com</p>
             <p><i class="bi bi-telephone"></i> +593 0998249402</p>
           </div>
-          <div class="col-md-6 text-end">
+          <div class="col-sm-12 col-md-6 col-lg-6 text-center">
             <h5>Síguenos en redes sociales</h5>
             <div class="social-links">
               <a href="#"><i class="bi bi-facebook"></i></a>
@@ -212,7 +329,9 @@
         </div>
         <div class="row mt-3">
           <div class="col-12 text-center">
-            <p>&copy; 2025 Sistema de Gestión. Todos los derechos reservados.</p>
+            <p>
+              &copy; 2025 Sistema de Gestión. Todos los derechos reservados.
+            </p>
           </div>
         </div>
       </div>
